2003-06-13  Adrian Aichner  <adrian@xemacs.org>

	* setup-paths.el (paths-emacs-root-p): Don't insist in lib-src
	directory on 'windows-nt, which currently does not have it.

2003-06-11  Adrian Aichner  <adrian@xemacs.org>

	* font-lock.el (lisp-font-lock-keywords-1): Only NAME, not NAME(
	to appear in font-lock-function-name-face.

2003-06-01  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.14 "cassava" is released.

2003-05-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* autoload.el (autoload-featurep-protect-autoloads):
	Make the error message say which sym was checked.

2003-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* subr.el (split-string): Update dox, tweak logic, to synch to GNU.

2003-05-15  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-package-index-file-location): New,
	so it is possible to specify a location for the index file.
	(package-get-locate-index-file): Use it.
	(package-get-maybe-save-index): Ditto.
	(package-get-user-index-filename): Remove.

2003-05-14  Steve Youngs  <youngs@xemacs.org>

	* package-get.el (package-get-require-signed-base-updates): Turn
	the PGP verification code back on.

2003-05-11  Simon Josefsson  <jas@extundo.com>

	* replace.el (delete-non-matching-lines, kill-non-matching-lines)
	(copy-non-matching-lines, delete-matching-lines)
	(kill-matching-lines, copy-matching-lines): Don't message.

2003-05-10  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.13 "cauliflower" is released.

2003-05-08  Jerry James  <james@xemacs.org>

	* code-init.el (coding-system-variable-default-value-table): Use
	undecided-unix for keyboards to avoid EOL autodetection on TTYs.
	* code-init.el (coding-system-variable-default-value): Update the
	comment to reflect the changed table.

2003-05-03  Steve Youngs  <youngs@xemacs.org>

	* package-admin.el (package-admin-find-top-directory): You can't
	concat a string & a char, so convert 'directory-sep-char' to a string.
