@@ -1,3 +1,8 @@
+2003-06-17  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* bytecomp.el (byte-compile-lambda): Discard docstring only if it
+	is not also the value of the lambda.
+
 2003-06-13  Adrian Aichner  <adrian@xemacs.org>
 
 	* setup-paths.el (paths-emacs-root-p): Don't insist in lib-src
